examples/test/testpolicy13135.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13135
  namespace: namespace159
spec:
  podSelector:
    matchLabels:
      key36: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value20
          key47: value45
      podSelector:
        matchLabels:
          key26: value19
